Bug 1113173 - InContent Prefs - Fix invisible checkmark and black text on selected row. r=jaws
UltraBlame original commit: 1a47604b575ea829d49f44062833d12afa6bbadf

--- a/browser/themes/shared/incontentprefs/search.css
+++ b/browser/themes/shared/incontentprefs/search.css
@@ -142,23 +142,6 @@ engineShown
 checked
 )
 {
-/
-*
-Unfortunately
-check
-.
-svg
-can
-'
-t
-be
-used
-in
-XUL
-trees
-.
-*
-/
 list
 -
 style
@@ -168,39 +151,35 @@ image
 url
 (
 "
+chrome
+:
+/
+/
+global
+/
+skin
+/
+in
+-
+content
+/
 check
 .
-png
+svg
+#
+check
 "
 )
 ;
--
-moz
--
-margin
--
-start
-:
-5px
-;
 width
 :
-12px
+21px
 ;
 height
 :
-12px
+21px
 ;
 }
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
 #
 engineList
 treechildren
@@ -215,6 +194,7 @@ image
 (
 engineShown
 checked
+selected
 )
 {
 list
@@ -226,14 +206,28 @@ image
 url
 (
 "
+chrome
+:
+/
+/
+global
+/
+skin
+/
+in
+-
+content
+/
 check
-2x
 .
-png
+svg
+#
+check
+-
+inverted
 "
 )
 ;
-}
 }
 #
 engineList
@@ -294,46 +288,6 @@ min
 height
 :
 36px
-;
-}
-#
-engineList
-treechildren
-:
-:
--
-moz
--
-tree
--
-cell
--
-text
-{
-/
-*
-Override
-to
-avoid
-text
-in
-the
-selected
-row
-being
-white
-on
-light
-gray
-.
-*
-/
-color
-:
--
-moz
--
-FieldText
 ;
 }
 #
